Add security to api.yaml doc
