# doc/api.yaml
@@ -62,10 +62,12 @@ paths:
                     example: "#U1234"
   /setUsername/{username}:
     parameters: 
-      - $ref: "#/components/parameters/identifier"
       - $ref: "#/components/parameters/username"
     #* setMyUserName
     put: 
+      security:
+      - bearerAuth : []
+      - {} #nosec
       tags: ["Session User actions"]
       summary: Set user username
       description: |-
@@ -92,13 +94,16 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/user"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /stream/{username}:
     parameters:
-      - $ref: "#/components/parameters/identifier"
       - $ref : "#/components/parameters/username"
     #* getMyStream
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Session User actions"]
       summary: Return user stream
       description: |-
@@ -138,13 +143,16 @@ paths:
                 type: array
                 items: { $ref: "#/components/schemas/photosList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /profile/{username}:
     parameters: 
-      - $ref: "#/components/parameters/identifier"
       - $ref: "#/components/parameters/username"
     #* getUserProfile
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User actions"]
       summary: Return user profile
       operationId: getUserProfile
@@ -157,13 +165,16 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/user"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /ban/{username}:
     parameters: 
-      - $ref: "#/components/parameters/identifier"
       - $ref: "#/components/parameters/username"
     #* banUser
     post: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Ban actions"]
       summary: Ban user
       description: |-
@@ -176,9 +187,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/banList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* getBans
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Ban actions"]
       summary: Return user bans
       operationId: getBans
@@ -191,9 +206,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/banList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* unbanUser
     delete: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Ban actions"]
       summary: Unban user
       description: |-
@@ -203,13 +222,16 @@ paths:
       responses:
        "200": {description: Ban removed successfully.}
        "400": { $ref: "#/components/responses/BadRequest" }
+       "401": { $ref: "#/components/responses/UnauthorizedError" }
        "500": { $ref: "#/components/responses/InternalServerError" }
   /follow/{username}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref: "#/components/parameters/username"
     #* followUser
     post: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Follow actions"]
       summary: Follow user
       description: |-
@@ -222,9 +244,13 @@ paths:
             application/json:
               schema: {$ref: "#/components/schemas/followList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* getFollowers
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Follow actions"]
       summary: Return user followers
       operationId: getFolowers
@@ -237,9 +263,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/followList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* unfollowUser
     delete: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["User Follow actions"]
       summary: Unfollow user
       description: |-
@@ -248,12 +278,13 @@ paths:
       responses:
        "200": {description: Follow removed successfully.}
        "400": { $ref: "#/components/responses/BadRequest" }
+       "401": { $ref: "#/components/responses/UnauthorizedError" }
        "500": { $ref: "#/components/responses/InternalServerError" }
   /photo/:
-    parameters:
-      - $ref: "#/components/parameters/identifier" 
     #* uploadPhoto
     post: 
+      security:
+      - bearerAuth : []
       tags: ["Photo actions"]
       summary: Upload photo
       description: |-
@@ -261,17 +292,17 @@ paths:
         format is not correct, then an error response is given.
       operationId: uploadPhoto
       requestBody:
+        required: true
         content:
           image/*:
             schema:
               type: object
               properties:
-                photoId: 
-                  description:  Unique photo identifier.
+                 file: 
                   type: string
+                  format: binary
                   readOnly: true
-                  example: "#P1234"
-        required: true
+
       responses:
         "201":
           description: Photo uploaded successfully.
@@ -282,14 +313,21 @@ paths:
                   identifier:
                     type: string
                     example: "#P1234"
+                  file: 
+                    type: string
+                    format: binary
+                    readOnly: true
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /photo/{username}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref: "#/components/parameters/username"
     #* getUserPhotos
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []      
       tags: ["Photo actions"]
       summary: Return user photos
       operationId: getUserPhotos
@@ -302,13 +340,16 @@ paths:
             image/*:
               schema: { $ref: "#/components/schemas/photosList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /photo/{photoId}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref : "#/components/parameters/photoID"
     #* deletePhoto
     delete:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Photo actions"]
       operationId: deletePhoto
       summary: Remove photo
@@ -318,13 +359,16 @@ paths:
       responses:
         "200": {description: Photo deleted successfully.}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /like/{photoId}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref : "#/components/parameters/photoID"
     #* likePhoto
     post: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Like actions"]
       operationId: likePhoto
       summary: Like photo
@@ -338,9 +382,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/likesList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* getLikes
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Like actions"]
       summary: Return photo likes
       description: |-
@@ -354,9 +402,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/likesList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* unlikePhoto
     delete: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Like actions"]
       operationId: unlikePhoto
       summary: Delete like
@@ -366,13 +418,16 @@ paths:
       responses:
         "200": {description: Like removed successfully.}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /comment/{photoId}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref : "#/components/parameters/photoID" 
     #* commentPhoto
     post:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Comment actions"]
       summary: Add comment
       operationId: commentPhoto
@@ -400,9 +455,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/commentsList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* getComments
     get:
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Comment actions"]
       summary: Return photo comments
       description: |-
@@ -416,13 +475,16 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/commentsList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }  
   /comment/{commentId}:
     parameters:
-      - $ref: "#/components/parameters/identifier" 
       - $ref: "#/components/parameters/commentID"
     #* editComment
     put: 
+      security:
+      - {} #nosec
+      - bearerAuth : []
       tags: ["Comment actions"]
       operationId: editComment
       summary: Edit comment
@@ -449,9 +511,13 @@ paths:
             application/json:
               schema: { $ref: "#/components/schemas/commentsList"}
         "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/UnauthorizedError" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     #* uncommentPhoto
     delete:
+     security:
+     - {} #nosec
+     - bearerAuth : []
      tags: ["Comment actions"]
      operationId: uncommentPhoto
      summary: Remove comment
@@ -461,10 +527,18 @@ paths:
      responses:
        "200": {description: Comment removed successfully.}
        "400": { $ref: "#/components/responses/BadRequest" }
+       "401": { $ref: "#/components/responses/UnauthorizedError" }
        "500": { $ref: "#/components/responses/InternalServerError" }
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
   responses:
+    #* UnauthorizedError response 
+    UnauthorizedError:
+      description: Access token is missing or invalid
     #* BadRequest response
     BadRequest:
       description: The request was not compliant with the documentation (eg. missing fields, etc).
@@ -496,7 +570,7 @@ components:
     #* followList schema
     followList:
       title: Followers
-      description: This object represent the likes under a photo.
+      description: This object represent the followers of a single user.
       type: object
       properties:
         identifier:
@@ -504,8 +578,12 @@ components:
           type: string
           readOnly: true
           example: "#U1234"
-        follow: 
-          description: list of objects (each object is a user)
+        username:
+          description: User username.
+          type: string
+          example: LucianCrainic
+        followers: 
+          description: list of objects (each object is a single user)
           type: array
           items:
             type: object
@@ -518,7 +596,7 @@ components:
     #* banList schema
     banList:
       title: Bans
-      description: This object represent the likes under a photo.
+      description: This object represent the bans of a single user.
       type: object
       properties:
         identifier:
@@ -526,8 +604,12 @@ components:
           type: string
           readOnly: true
           example: "#U1234"
+        username:
+          description: User username.
+          type: string
+          example: LucianCrainic
         ban: 
-          description: list of objects (each object is a user)
+          description: list of objects (each object is a single user)
           type: array
           items:
             type: object
@@ -540,7 +622,7 @@ components:
     #* commentsList schema
     commentsList: 
       title: Comments
-      description: This object represent the comments under a photo.
+      description: This object represent the comments under a single photo.
       type: object
       properties:
         photoId: 
@@ -578,7 +660,7 @@ components:
     #* likesList schema
     likesList: 
       title: Likes
-      description: This object represent the users banned by another user.
+      description: This object represent the likes to a single photo.
       type: object
       properties:
         photoId: 
@@ -600,7 +682,7 @@ components:
     #* photoList schema
     photosList: 
       title: Photos
-      description: This object represent the photos of an user.
+      description: This object represent the photos of a single user.
       type: object
       properties:
         identifier:
@@ -619,22 +701,16 @@ components:
                 type: string
                 readOnly: true
                 example: "#P1234"
+              file: 
+                  type: string
+                  format: binary
+                  readOnly: true
               uploadDate:
                 description: Upload date of a specific photo.
                 type: string
                 readOnly: true
                 example: "2022-11-02T09:00:00Z"
   parameters:
-    #* identififer parameter
-    identifier:
-      schema:
-          type: string
-          example: "#U1234"
-          readOnly: true
-      name: identifier
-      in: header
-      required: true
-      description: "**Identifier** of a WASAPhoto user."
     #* username parameter
     username:
       schema:
